--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "repository": "",
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
-  "scripts": "node app.js"
+  "scripts":{
+   "start": "node app.js"
+    
+  }
   "dependencies": {
     "async": "~0.2.8",
     "body-parser": "^1.18.2",
